[package]
name = "hash-table-id"
description = "get table num for key's hash code"
authors = ["chaosmo <eagleqingluo@gmail.com>"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/qingmo/hash-table-id"
homepage = "https://github.com/qingmo/hash-table-id"
documentation = "https://docs.rs/hash-table-id/"
readme = "README.md"
license = "MIT"
keywords = ["hash", "split-table", "java"]
exclude = ["demo.png", "hash-table-id.alfredworkflow"]



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
exitcode = "1.1.2"
